--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 DDPG-HER-Convert/test.py
 DDPG-HER-Convert/__pycache__
 DDPG-HER-Convert/Ref/__pycache__
+LearningAgent/Final Report.pdf
+LearningAgent.zip
